# cs240

./: .gitignore  Globber.hs  Phantoms.hs  TestGlobber.hs  netrock.hs
code/: Application.hs  Concurrency.hs  CountingLetters.hs  Hole1.hs  Phantom.hs  PingPong.hs  PostgresqlApp.hs  SimpleApp.hs  Webapp.hs  code.cabal  consumers.hs  data.hs  default-signatures.hs  derive-generic.hs  exception.hs  existentialQuantification.hs  extensions-type.hs  extensions.hs  fundeps.hs  generic-1.hs  generic-cast.hs  generic-show.hs  generic.hs  heterogeneous.hs  lenses.hs  monadclass.hs  naive_representation.c  object-oriented.hs  overlapping.hs  pipe-exercise.hs  pipe.hs  pipes.hs  producer.hs  rep.hs  stack.yaml  testEncode.hs  transfer.hs  unboxed.hs  undecidable.hs  with_type.hs
lab1/: Globber.hs
lab2/chat-1.0.0/: Server.hs
lab2/chat-1.0.0/src/: Chat.hs
lab3/trahs-1.0.0/: stack.yaml  trahs.cabal
lab3/trahs-1.0.0/garade/: .trahs.db
lab3/trahs-1.0.0/garage/: .trahs.db  fileA#-1945333779298910062.5  fileB
lab3/trahs-1.0.0/market/: .trahs.db  fileB
lab3/trahs-1.0.0/src/: FileUtil.hs  Trahs.hs
lab3/trahs-1.0.0/test/: Test.hs
